css/article.css
HTML {
  margin: 0;
}

BODY {
  display: flex;
  margin: 0;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  font-family: Roboto, Segoe UI, Tahoma, sans-serif;
  font-size: 13px;
  position: absolute;
  user-select: none;
}

#background {
  /* background is in its own div so text copied to clipboard don't pick up a background color */
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgb(169, 169, 169);
}

#document-area {
  position: relative;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: auto;
}

#article-container {
  position: relative;
  /* using text-align to center #article since we want its left margin to be respected */
  text-align: center;
  height: 100%;
  overflow: auto;
}

#article {
  display: inline-block;
  position: relative;
  margin: 5mm 5mm 5mm 5mm;
  text-align: start;
}

#article-content {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 25mm 25mm 25mm 25mm;
}

#article-text {
  font-size: 12pt;
  text-align: justify;
  white-space: pre-wrap;
}

#article-text H1,
#article-text H2,
#article-text H3,
#article-text H4,
#article-text H5,
#article-text H6 {
  text-align: start;
}

#article-text TABLE {
  border-collapse: collapse;
  text-align: start;
  font-size: 80%;
}

#article-text TD,
#article-text TH {
  border: 1px solid rgb(0, 0, 0);
  padding: 1px 2px 0 2px;
}

#article-text TABLE.decomposed {
  display: block;
  width: fit-content;
  border-collapse: collapse;
  max-width: calc(100% - 1px);
  margin-left: auto;
  margin-right: auto;
}

#article-text TABLE.decomposed TBODY,
#article-text TABLE.decomposed THEAD,
#article-text TABLE.decomposed TFOOT {
  display: block;
  width: fit-content;
  max-width: 100%;
}

#article-text TABLE.decomposed TR {
  display: flex;
  flex-direction: row;
  margin-bottom: -1px;
  min-width: 10px;
  max-width: 100%;
}

#article-text TABLE.decomposed TD,
#article-text TABLE.decomposed TH {
  flex: 0 0 auto;
  box-sizing: border-box;
  margin-left: -1px;
}

#article-text TABLE.decomposed CAPTION {
  display: flex;
  width: 100%;
  justify-content: center;
}

#article-text:focus {
  outline: none;
}

#article-text *:first-child {
  margin-top: 0;
}

#article-text SUP {
  font-size: 10pt;
  font-weight: 400;
}

#article-text.rtl {
  direction: rtl;
}

#article.filter-automatic #article-text .likely-junk {
  display: none;
}

#article.filter-manual #article-text .likely-junk {
  background-color: rgba(255, 102, 102, 0.9);
}

#article.filter-manual #article-text .possibly-junk {
  animation-name: flashing-background;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-delay: 1s;
}

@keyframes flashing-background {
  0%   { background-color: rgba(255, 255, 102, 0); }
  10%  { background-color: rgba(255, 255, 102, 0.8); }
  40%  { background-color: rgba(255, 255, 102, 0.8); }
  80%  { background-color: rgba(255, 255, 102, 0); }
  100% { background-color: rgba(255, 255, 102, 0); }
}

#article.filter-manual #article-text * {
  cursor: pointer;
}

#article.filter-manual #article-footers {
  opacity: 0.25;
}

#article-footers {
  font-size: 10pt;
}

.footnote-number.hidden {
  display: none;
}

#article-menu {
  position: absolute;
  background-color: #eeeeee;
  border-radius: 4px;
  box-shadow: 1px 1px 5px black;
  padding: 2px 2px 2px 2px;
  white-space: nowrap;
}

#article-menu.hidden {
  display: none;
}

#article-menu UL {
  font-size: 1.4em;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#article-menu UL LI {
  padding: 0.2em 0.4em 0.2em 0.4em;
  cursor: pointer;
}

#article-menu UL LI.hidden {
  display: none;
}

#article-menu UL LI:hover {
  color: #ffffff;
  background-color: #333333;
  border-radius: 4px;
}

#footnote-backstage {
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

#line-height-detection {
  height: 0;
  overflow: hidden;
  visibility: hidden;
}

.footer-pusher {
  float: right;
  line-height: 0;
  visibility: hidden;
  width: 0px;
  margin-left: 1px;
}

.footer-content {
  float: right;
  box-sizing: border-box;
  width: 100%;
  margin-top: 5mm;
  /* page margin top plus margin bottom */
  margin-bottom: calc(25mm + 25mm);
  padding-inline-start: 1.2em;
  white-space: pre-wrap;
}

.footer-content:focus {
  outline-offset: 12px;
}

.footer-content.rtl {
  direction: rtl;
}

.footer-content:empty {
  /* no margin needed when it's empty */
  margin-top: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.footer-spacer {
  float: right;
  width: 100%;
  /* should match margin-top of .paper */
  height: 5mm;
  line-height: 0;
  visibility: hidden;
}

#article-footers *:last-child .footer-spacer {
  display: none;
}

.paper {
  width: 210mm;
  height: 297mm;
  /* should match height of .footer-spacer */
  margin-top: 5mm;
  background-color: white;
  box-shadow: 1px 1px 5px black;
}

.paper:first-child {
  margin-top: 0;
}

#top-drawer {
  display: flex;
  position: absolute;
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  border-top-width: 0;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8);
  padding: 10px 0 10px 0;
  top: -100px;
  left: 0;
  right: 0;
  width: 80%;
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;
  padding: 16px 8px 8px 8px;
  transition: top 0.5s ease-out;
}

#top-drawer INPUT {
  flex-grow: 1;
  flex-shrink: 1;
  margin-right: 8px;
}

#status-container {
  position: absolute;
  font-size: 1.2em;
  font-weight: bold;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  padding: 0.5em 0.5em 0.5em 0.5em;
  background: rgb(255, 255, 102);
  border: 3px solid rgb(0, 0, 0);
  width: fit-content;
  height: fit-content;
  max-width: 50%;
  box-shadow: 4px 4px 5px rgb(0, 0, 0, 0.25);
}

#status-container:empty {
  display: none;
}

#help-button {
  position: absolute;
  top: calc(100% - 32px - 8px);
  left: 8px;
  width: 32px;
  height: 32px;
  background-image: url('../img/question.svg');
  background-repeat: no-repeat;
  background-size: 32px;
  opacity: 0.25;
  cursor: pointer;
  z-index: 10;
}

#help-button:hover {
  opacity: 1;
}

#restore-all-button {
  position: absolute;
  top: calc(100% - 32px - 8px);
  left: calc(100% - 32px - 8px - 20px);
  width: 32px;
  height: 32px;
  background-image: url('../img/double-check.svg');
  background-repeat: no-repeat;
  background-size: 32px;
  opacity: 0.25;
  cursor: pointer;
  z-index: 10;
  display: none;
}

BODY.clean #restore-all-button {
  display: block;
}

#restore-all-button:hover {
  opacity: 1;
}

.loader {
  opacity: 0;
  transition: opacity 0.5s ease-in;
}

BODY.pending .loader {
  opacity: 0.5;
}

BODY.error .loader {
  display: none;
}

#overlays {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  pointer-events: none;
}

.overlay {
  position: absolute;
  box-sizing: border-box;
  border: 3px solid rgba(255, 0, 255, 0.25);
}

.overlay:nth-child(even) {
  border-color: rgba(0, 255, 255, 0.25);
}

@page {
  size: A4 portrait;
  margin: 0;
}

@media print {
  #background,
  #side-bar-container,
  #side-bar-button-container,
  #article-menu,
  #status-container,
  #top-drawer {
    /* hide UI elements */
    display: none;
  }

  #article-container {
    /* remove background and prevent appear of scroll bar */
    background-color: transparent;
    overflow: visible;
  }

  #article {
    /* inline-block is only used in screen-display for proper scroll-bar behavior
       it causes extra space at the top when printing for some reason */
    display: block;
    width: fit-content;
    /* remove margin around article */
    margin: 0;
  }

  #article.filter-manual #article-footers {
    opacity: 1;
  }

  #article-background {
    /* hidden paper background */
    visibility: hidden;
  }

  .paper {
    /* remove spacing between sheets */
    margin-top: 0;
    /* prevent generation of an blank extra page at the end */
    height: 0;
    box-shadow: none;
  }

  .footer-spacer {
    /* remove spacing between sheets */
    display: none;
  }

  #article.filter-manual #article-text .likely-junk {
    background: none;
  }

  #article.filter-manual #article-text .possibly-junk {
    animation: none;
  }
}

